2009-03-27  Scott James Remnant  <scott@netsplit.com>

	* init/Makefile.am (AM_CPPFLAGS): Use -iquote$(srcdir) instead of -I
	since we only need it to pick those paths up.
	* util/Makefile.am (AM_CPPFLAGS): Likewise.

2009-02-20  Scott James Remnant  <scott@netsplit.com>

	* util/initctl.c (handle_job_instance_end, handle_job_process)
	(handle_job_status_end, handle_event),
	* util/shutdown.c (main): No need for new_* temporary variable when
	looping over nih_realloc with NIH_MUST.

	* util/initctl.c (job_info_output, output_name, handle_job_list)
	(handle_job_instance, handle_job_instance_end)
	(handle_job_status, handle_job_process, handle_job_status_end)
	(handle_event, env_option),
	* util/telinit.c (main),
	* util/shutdown.c (main, shutdown_now, timer_callback, wall): 

	* init/event.c (event_init, event_pending_handle_jobs, event_finished),
	* init/event_operator.c (event_operator_events),
	* init/job.c (job_emit_event, job_name),
	* init/job_class.c (job_class_init, job_class_start)
	(job_class_stop, job_class_restart),
	* init/job_process.c (job_process_run, job_process_error_read)
	(job_process_kill),
	* init/conf.c (conf_init, conf_source_reload_file)
	(conf_reload_path),
	* init/control.c (control_init, control_server_connect)
	(control_bus_open): Set variable outside of NIH_MUST macro.

	* init/event.c (event_pending_handle_jobs): Set variable outside
	of NIH_SHOULD macro.

	* init/Makefile.am ($(com_ubuntu_Upstart_OUTPUTS)): 
	($(com_ubuntu_Upstart_Job_OUTPUTS)): 
	($(com_ubuntu_Upstart_Instance_OUTPUTS)): Update expected path
	of nih-dbus-tool

	* configure.ac: Create nih-dbus-tool Makefile
	* Makefile.am (SUBDIRS): Build in nih-dbus-tool

2009-01-29  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.5.2
	* NEWS: Begin 0.5.2

	* NEWS: Copy in news from 0.5.1; that release doesn't appear in
	this ChangeLog since it was made on a separate branch.

	* init/tests/test_blocked.c (test_new),