@@ -115,7 +115,7 @@ NihHash *job_classes = NULL;
  *
  * Interfaces exported by job class objects.
  **/
-const static NihDBusInterface *job_class_interfaces[] = {
+static const NihDBusInterface *job_class_interfaces[] = {
 	&com_ubuntu_Upstart_Job,
 	NULL
 };
