@@ -811,7 +811,7 @@ job_process_kill_timer (Job      *job,
 	nih_assert (job != NULL);
 	nih_assert (timer != NULL);
 	nih_assert (job->kill_timer == timer);
-	nih_assert (job->kill_process != -1);
+	nih_assert (job->kill_process != (ProcessType)-1);
 
 	process = job->kill_process;
 	nih_assert (job->pid[process] > 0);
